# pinball-camera-gstreamer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FrameFetcher.cpp  FrameFetcher.h  RestAPI.cpp  RestAPI.h  main.cpp
